--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "react-dom": "^17.0.2",
     "react-font": "^1.2.1",
     "react-hook-form": "^6.13.1",
+    "react-hot-toast": "^2.0.0",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
+    "sweetalert": "^2.1.2",
+    "swiper": "^6.7.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
